--- a/src/components/layout/MainLayout/MainLayout.module.css
+++ b/src/components/layout/MainLayout/MainLayout.module.css
@@ -8,11 +8,11 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    padding-bottom: 120px; /* Space for the fixed footer */
 }
 
 .footer {
     width: 100%;
-    margin-top: auto;
 }
 
 /* Inactividad */
