--- a/src/components/common/InteractiveCarousel/InteractiveCarousel.module.css
+++ b/src/components/common/InteractiveCarousel/InteractiveCarousel.module.css
@@ -1,6 +1,6 @@
 .carouselContainer {
     width: 100%;
-    height: 500px;
+    height: 420px; /* Reduced from 500px */
     margin: 0 auto;
     position: relative;
 }
@@ -215,7 +215,7 @@
 /* Responsivo */
 @media screen and (max-width: 768px) {
     .carouselContainer {
-        height: 400px;
+        height: 320px;
     }
 
     .titleImage {
