--- a/src/pages/Details/Details.module.css
+++ b/src/pages/Details/Details.module.css
@@ -1,8 +1,9 @@
 /* Contenedor principal */
 .container {
     width: 100%;
-    min-height: 100vh;
-    padding: 6rem 2rem 2rem;
+    height: 100vh;
+    height: 100dvh;
+    padding: 7rem 2rem 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,6 +43,7 @@
 .detailContainer {
     width: 95%;
     max-width: 1100px;
+    height: 100%;
     padding: 50px;
     background-color: rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(30px);
@@ -54,7 +56,13 @@
     align-items: center;
     position: relative;
     z-index: 3;
+    overflow-y: auto;
+    padding-bottom: 200px;
     animation: fadeInSlide 0.8s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+}
+
+.detailContainer::-webkit-scrollbar {
+    display: none;
 }
 
 /* Título principal */
