--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -3,8 +3,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
-    padding: 1rem;
+    height: 100vh;
+    height: 100dvh;
+    padding: 2rem;
     position: relative;
     overflow: hidden;
     background-color: #000;
